<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Title -->
    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/support_feedback"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Feedback Space -->
    <EditText
        android:id="@+id/feedback_space"
        android:layout_width="300sp"
        android:layout_height="200sp"
        android:layout_marginTop="20sp"
        android:fontFamily="casual"
        android:hint="@string/questions_comments"
        android:textColor="@color/white"
        android:textColorHint="#65FF65"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback" />

    <!-- Opens up Gmail to send the feedback -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginStart="200sp"
        android:layout_marginTop="30sp"
        android:backgroundTint="@color/codinggreen"
        android:text="@string/Send"
        android:fontFamily="casual"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_space" />

    <!-- Dismisses Dialog -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginEnd="200sp"
        android:layout_marginTop="30sp"
        android:backgroundTint="#F85353"
        android:text="@string/cancel"
        android:fontFamily="casual"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_space" />


</androidx.constraintlayout.widget.ConstraintLayout>