<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Title -->
    <TextView
        android:id="@+id/how_to_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/how_to_play"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dismiss Button -->
    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/codinggreen"
        android:fontFamily="casual"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/steps4" />

    <!-- All the Rules are TextViews Below -->
    <TextView
        android:id="@+id/steps"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:text="@string/instructions1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/steps2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:text="@string/instructions2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps" />

    <TextView
        android:id="@+id/steps3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:text="@string/instructions3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps2" />

    <TextView
        android:id="@+id/steps4"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:text="@string/instructions4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps3" />

    <!-- Funny Todd Gif Image -->
    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps4"
        app:layout_constraintBottom_toTopOf="@id/okButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>